@@ -11,6 +11,7 @@ Bug Fixes
 - Fixed check for esam upgrade
 - Added a check for open_basedir and safe_mode when using CURLOPT_FOLLOWLOCATION
 - Fixed check for existing cache functions
+- Removed a bunch of undefined errors
 
 ----------------------
 Version 1.1.0 -> 1.1.1
